--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "       [0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SciPy  (0, 0)\t1.0\n",
+      "SciPy sparse CSR matrix  (0, 0)\t1.0\n",
       "  (1, 1)\t1.0\n",
       "  (2, 2)\t1.0\n",
       "  (3, 3)\t1.0\n"
@@ -75,8 +75,15 @@
    ],
    "source": [
     "sparse_matrix = sparse.csr_matrix(eye)\n",
-    "print(\"\\nSciPy{}\".format(sparse_matrix))"
+    "print(\"\\nSciPy sparse CSR matrix{}\".format(sparse_matrix))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
